<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="272dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginStart="65dp">

        <TextView
            android:id="@+id/signInButton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/button_style"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="signInButton"
            android:text="@string/sigh_in"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sighUpButton"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/switch_button"
            android:clickable="true"
            android:focusable="true"
            android:onClick="signUpButton"
            android:gravity="center"
            android:text="@string/sigh_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="207dp"
            tools:layout_editor_absoluteY="86dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="330dp"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_marginTop="170dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.073">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="17sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reppassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textSize="18sp"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/switch_btn"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="430dp"
        android:text="@string/accept"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="500dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />

</FrameLayout>